--- a/solutions/index.html
+++ b/solutions/index.html
@@ -466,7 +466,7 @@
                 <section class="inner-masthead relative" data-inner-masthead>
                     <div class="video-container">
                         <video autoplay loop muted class="masthead__video">
-                            <source src="../video/bg-video.webm" type="video/mp4">
+                            <source src="../video/bg-video.webm" type="video/webm">
                         </video>
                     </div>
                     <div class="">
