--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
                         <li id="menu-item-4700"
                             class="solutions menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-4700">
-                            <a href="https://it-projects.uz/solutions/">SOLUTIONS</a>
+                            <a href="./solutions/index.html">SOLUTIONS</a>
 
                             <ul class="sub-menu">
                                 <li id="menu-item-4699"
