--- a/solutions/index.html
+++ b/solutions/index.html
@@ -271,14 +271,15 @@
                     </svg>
                 </a>
                 <div class="header__burger-menu-new-cont">
-                    <a href="../index.html" class="header__burger-menu-new">
+                    <button class="header__burger-menu-new">
                         <svg width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M0 0H30C46.5685 0 60 13.4315 60 30V60H0V0Z" fill="#EEEEEE" />
                             <path d="M21 25H39" stroke="#030510" stroke-width="1.5" stroke-linecap="round" />
                             <path d="M21 30H39" stroke="#030510" stroke-width="1.5" stroke-linecap="round" />
                             <path d="M21 35H39" stroke="#030510" stroke-width="1.5" stroke-linecap="round" />
                         </svg>
-                    </a><svg class="header__close" width="60" height="60" viewBox="0 0 60 60" fill="none"
+                    </button>
+                    <svg class="header__close" width="60" height="60" viewBox="0 0 60 60" fill="none"
                         xmlns="http://www.w3.org/2000/svg">
                         <rect x="22" y="21" width="24" height="2" rx="1" transform="rotate(45 22 21)" fill="white" />
                         <rect x="21" y="38" width="24" height="2" rx="1" transform="rotate(-45 21 38)" fill="white" />
@@ -472,7 +473,14 @@
                     <div class="">
                         <div class="row align-items-center justify-content-center">
                             <div class="col-12 col-lg-10 banner__video">
-                                <h1 id="text-anim">Курсы по <span></span><br><span> программированию </span>в Ташкенте
+                                <h1 id="text-anim">
+                                    <span>
+                                        <span>курсы по</span>
+                                        <span id="text__changer"></span>
+                                        <br>
+                                        программированию
+                                        в Ташкенте
+                                    </span>
                                 </h1>
                                 <div class="inner-masthead__content">
                                     <p>Our expert team of product engineering and software development teams strive to
