--- a/solutions/index.html
+++ b/solutions/index.html
@@ -374,6 +374,7 @@
                                     </ul>
                                 </li>
                             </ul>
+                            
                         </div>
                         <div class="header__menu-cont-col header__menu-cont-col--last">
                             <ul class="secondary">
@@ -522,7 +523,7 @@
                                 <h2>Наши Курсы 💻</h2>
                             </div>
                             <div class="courses__block">
-                                <a href="#" class="courses__cards">
+                                <a href="../cisco/index.html" class="courses__cards">
                                     <div class="courses__cards-img">
                                         <div class="cisco__img"></div>
                                     </div>
@@ -558,12 +559,13 @@
                                         </div>
                                     </div>
                                 </a>
-                                <a href="#" class="courses__cards">
+                                <a href="../javacurs/index.html" class="courses__cards">
                                     <div class="courses__cards-img">
                                         <div class="java__img"></div>
                                     </div>
                                     <div class="courses__cards-block">
-                                        <h3 class="courses-main-title" style="font-weight: 700;">Курс «Java разработчик»</h3>
+                                        <h3 class="courses-main-title" style="font-weight: 700;">Курс «Java разработчик»
+                                        </h3>
                                         <div class="courses-main-info">3 месяца</div>
                                         <p class="courses-main-level"><b style="color:#2a284f;">Необходимый
                                                 уровень:</b><br>Курс для специалистов</p>
@@ -594,12 +596,13 @@
                                         </div>
                                     </div>
                                 </a>
-                                <a href="#" class="courses__cards">
+                                <a href="../google/index.html" class="courses__cards">
                                     <div class="courses__cards-img">
                                         <div class="google__img"></div>
                                     </div>
                                     <div class="courses__cards-block">
-                                        <h3 class="courses-main-title" style="font-weight: 700;">Курс «Управление проектами от Google»</h3>
+                                        <h3 class="courses-main-title" style="font-weight: 700;">Курс «Управление
+                                            проектами от Google»</h3>
                                         <div class="courses-main-info">3 месяца</div>
                                         <p class="courses-main-level"><b style="color:#2a284f;">Необходимый
                                                 уровень:</b><br>Курс для специалистов</p>
@@ -630,7 +633,7 @@
                                         </div>
                                     </div>
                                 </a>
-                                <a href="#" class="courses__cards huawei">
+                                <a href="../huawei/index.html" class="courses__cards huawei">
                                     <div class="courses__cards-img">
                                         <div class="huawei__img"></div>
                                     </div>
@@ -666,12 +669,13 @@
                                         </div>
                                     </div>
                                 </a>
-                                <a href="#" class="courses__cards">
+                                <a href="../qa/index.html" class="courses__cards">
                                     <div class="courses__cards-img">
                                         <div class="qa__img"></div>
                                     </div>
                                     <div class="courses__cards-block">
-                                        <h3 class="courses-main-title" style="font-weight: 700;">Курс «QA-инженер (тестировщик)»</h3>
+                                        <h3 class="courses-main-title" style="font-weight: 700;">Курс «QA-инженер
+                                            (тестировщик)»</h3>
                                         <div class="courses-main-info">3 месяца</div>
                                         <p class="courses-main-level"><b style="color:#2a284f;">Необходимый
                                                 уровень:</b><br>Курс для специалистов</p>
@@ -702,12 +706,13 @@
                                         </div>
                                     </div>
                                 </a>
-                                <a href="#" class="courses__cards">
+                                <a href="../windowsServer/index.html" class="courses__cards">
                                     <div class="courses__cards-img">
                                         <div class="windowsserver__img"></div>
                                     </div>
                                     <div class="courses__cards-block">
-                                        <h3 class="courses-main-title" style="font-weight: 700;">Курс «Администратор Windows Server»</h3>
+                                        <h3 class="courses-main-title" style="font-weight: 700;">Курс «Администратор
+                                            Windows Server»</h3>
                                         <div class="courses-main-info">3 месяца</div>
                                         <p class="courses-main-level"><b style="color:#2a284f;">Необходимый
                                                 уровень:</b><br>Курс для специалистов</p>
@@ -738,7 +743,7 @@
                                         </div>
                                     </div>
                                 </a>
-                                
+
                             </div>
 
                         </div>
