--- a/index.html
+++ b/index.html
@@ -501,7 +501,9 @@
                 <section class="masthead relative" data-masthead>
                     <div class="video-container">
                         <video autoplay loop muted class="masthead__video">
-                            <source src="./video/bg-video.webm" type="video/mp4">
+                            <source src="./video/bg-video.mp4" type="video/mp4">
+                            <source src="./video/bg-video.webm" type="video/webm">
+                            Your browser does not support the video tag.
                         </video>
                     </div>
                     <div class="container possition">
