--- a/index.html
+++ b/index.html
@@ -265,9 +265,7 @@
 
     <header class="header normal menu-closed">
         <div class="header__main-menu-wrapper">
-            <div class="header__main-rect" data-width="60" data-height="60" data-width-to="1240" data-height-to="861"
-                style="width: 60px; height: 60px;">
-            </div>
+            <div class="header__main-rect"></div>
             <div class="header__logo-cont">
 
                 <a href="https://it-projects.uz">
@@ -282,7 +280,7 @@
                 </a>
 
                 <div class="header__burger-menu-new-cont">
-                    <a href="https://it-projects.uz" class="header__burger-menu-new">
+                    <button class="header__burger-menu-new">
                         <svg width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M0 0H30C46.5685 0 60 13.4315 60 30V60H0V0Z" fill="#EEEEEE"></path>
 
@@ -292,7 +290,7 @@
 
                             <path d="M21 35H39" stroke="#030510" stroke-width="1.5" stroke-linecap="round"></path>
                         </svg>
-                    </a>
+                    </button>
 
                     <svg class="header__close" width="60" height="60" viewBox="0 0 60 60" fill="none"
                         xmlns="http://www.w3.org/2000/svg">
