--- a/index20.html
+++ b/index20.html
@@ -234,7 +234,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-6 header__new-right normal fixed">
-                    <div class="language-selector">
+                    <div class="language-selector btn-cta">
                         <div class="selected-lang" id="selectedLang">
                             <img src="https://flagcdn.com/w40/uz.png" alt="Uzbek Flag">
                             <span>Ўз</span>
@@ -867,6 +867,33 @@
                             <div class="card__left-card active" data-href="/services/">
                                 <div class="card__content">
                                     <div class="card__title-cont">
+                                        <h2 class="card__title">Developing Lasting Digital Products</h2>
+                                    </div>
+                                    <div class="card__content-para">
+                                        <p>We breathe life into designs through scalable and visually stunning
+                                            development that engage end-users and convert.</p>
+                                    </div>
+                                    <ul class="card__content-list">
+                                        <li class="card__content-list-item"><a href="#">Web
+                                                Application</a></li>
+                                        <li class="card__content-list-item"><a href="#">Front-End
+                                                Development</a></li>
+                                        <li class="card__content-list-item"><a href="#">Mobile
+                                                Application</a></li>
+                                        <li class="card__content-list-item"><a href="#">Cross
+                                                platform Applications</a></li>
+                                        <li class="card__content-list-item"><a href="#">Custom
+                                                Application</a></li>
+                                        <li class="card__content-list-item"><a href="#">SAAS
+                                                Implementation</a></li>
+                                    </ul>
+                                    <a href="https://it-loyihalar.uz/services/"
+                                        class="btn is-style-fill-with-arrow">Learn More</a>
+                                </div>
+                            </div>
+                            <div class="card__right-card" data-href="/services/">
+                                <div class="card__content">
+                                    <div class="card__title-cont">
                                         <h2 class="card__title">Delighting through <br />
                                             Design</h2>
                                     </div>
@@ -894,33 +921,7 @@
                                     <a href="/services/" class="btn is-style-fill-with-arrow">Learn more</a>
                                 </div>
                             </div>
-                            <div class="card__right-card" data-href="/services/">
-                                <div class="card__content">
-                                    <div class="card__title-cont">
-                                        <h2 class="card__title">Developing Lasting Digital Products</h2>
-                                    </div>
-                                    <div class="card__content-para">
-                                        <p>We breathe life into designs through scalable and visually stunning
-                                            development that engage end-users and convert.</p>
-                                    </div>
-                                    <ul class="card__content-list">
-                                        <li class="card__content-list-item"><a href="#">Web
-                                                Application</a></li>
-                                        <li class="card__content-list-item"><a href="#">Front-End
-                                                Development</a></li>
-                                        <li class="card__content-list-item"><a href="#">Mobile
-                                                Application</a></li>
-                                        <li class="card__content-list-item"><a href="#">Cross
-                                                platform Applications</a></li>
-                                        <li class="card__content-list-item"><a href="#">Custom
-                                                Application</a></li>
-                                        <li class="card__content-list-item"><a href="#">SAAS
-                                                Implementation</a></li>
-                                    </ul>
-                                    <a href="https://it-loyihalar.uz/services/"
-                                        class="btn is-style-fill-with-arrow">Learn More</a>
-                                </div>
-                            </div>
+                            
                         </div>
                     </div>
                 </div>
